updated main page, and pp & tc

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="An app to time your study routine & create custom routines">
-  <meta name="author" content="MyStudyTimerApp">
+  <meta name="description" content="An app to strengthen you pelvic floor with kegels.">
+  <meta name="author" content="MensKegelTrainer">
 
-  <title>My Study Timer</title>
-  <meta name="keywords" content="app, Study Timer App, MyStudyTimer, custom routines, create routine, timer, study, pomodoro, pomodoro timer, Edge Effect Media,">
+  <title>Mens Kegel Trainer</title>
+  <meta name="keywords" content="mens kegel trainer, kegel trainer,kegel,kegel exercises, kegel men, Effect Media,">
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -28,10 +28,10 @@
     <div class="masthead-content">
       <div class="container">
         <img src="img/logo.png" style="width: 50%;">
-        <h1 class="masthead-heading mb-0" style="display: none;">MyStudy Timer</h1>
+        <h1 class="masthead-heading mb-0" style="display: none;">Mens Kegel Trainer</h1>
         <br>
-        <h2 class="mb-0" id="yoga-anywhere"><span style="font-weight: 200;">study</span> <b>anywhere</b></h2>
-        <h4 class="mb-0" id="yoga-anywhere1" style="font-weight: 200;"><i>time & build study sessions</i></h4>
+        <h2 class="mb-0" id="yoga-anywhere"><span style="font-weight: 200;">Confident</span> <b>Control</b></h2>
+        <h4 class="mb-0" id="yoga-anywhere1" style="font-weight: 200;"><i>Smart Kegel Plans</i></h4>
         <div class="text-center pt-5" style="margin: auto;">
               <a href="https://play.google.com/store/apps/details?id=com.edgeeffectmedia.studytimer&hl=en_AU" style="padding: 1cm"><img style="height: 55px;" class="img-fluid" src="img/google_play_badge.png" alt=""></a>
               <a href="https://apps.apple.com/us/app/my-study-timer-pomodoro/id6744005752" style="padding: 1cm"><img style="height: 60px;" class="img-fluid" src="img/ios_store_badge.svg" alt=""></a>
@@ -55,8 +55,8 @@
         </div>
         <div class="col-lg-6 order-lg-1">
           <div class="p-5">
-            <h2><span style="font-weight: 700;">PERSONALISED</span> <span style="font-weight: 200;">STUDY</span></h2>
-            <p class="pt-3 pr-5">Boost your productivity and focus with My Study Timer, the ultimate AI-powered Study Timer and Pomodoro Timer! Whether you’re preparing for exams, mastering new skills, or improving your study habits, this app helps you stay on track with customizable study timers, Pomodoro sessions, and AI-generated study plans.</p>
+            <h2><span style="font-weight: 200;"></span> <span style="font-weight: 700;">STRENGTH & CONTROL</span></h2>
+            <p class="pt-3 pr-5">Men Kegel Trainer is more than just a pelvic floor app — it’s your daily companion for building real, lasting strength where it counts. Whether you’re looking to boost sexual performance, prevent premature ejaculation, reduce ED symptoms, or improve urinary and bowel control, our guided workouts help you train smarter, not harder. With just a few minutes a day, you’ll start noticing powerful improvements in stamina, sensation, and confidence.</p>
           </div>
         </div>
       </div>
@@ -76,8 +76,8 @@
         </div>
         <div class="col-lg-6">
           <div class="p-5">
-            <h2><span style="font-weight: 200;">AI Guided</span> <span style="font-weight: 700;">STUDY SESSIONS</span></h2>
-            <p class="pt-3 pr-5">Get personalized schedules based on your learning style. Use AI to generate totally custom flashcards and study sessions tailored to you.</p>
+            <h2><span style="font-weight: 200;">Tailored Routines</span> <span style="font-weight: 700;"><br/>LASTING RESULTS</span></h2>
+            <p class="pt-3 pr-5">From complete beginners to those maintaining pelvic health, Men Kegel Trainer offers structured programs for every goal. Choose routines designed for better sexual function, post-surgery recovery, or core and posture support — all created by experts and based on proven methods. With simple, discreet sessions and gradual progression, it’s never been easier to stay consistent and in control of your results.</p>
           </div>
         </div>
       </div>
@@ -99,41 +99,9 @@
   <section>
     <div class="gradient-parent" style="margin: auto; text-align: center;">
       
-            <img class="img-fluid" style="width: 700px; border-radius: 1cm;" src="img/quote.PNG" alt="">
+            <img class="img-fluid" style="width: 10cm; border-radius: 1cm;" src="img/quote.PNG" alt="">
     </div>
   </section>
-  
-
-  <section>
-    <div class="container">
-      <div class="row pt-5 pl-5 text-center">
-        <div class="col-lg-6 pb-5"  id="paddleft">
-          <h2 style="width: 6cm; text-align: left; line-height: 1.2cm; padding-bottom: 1cm;"><span style="font-weight: 200;">WHAT COULD </span><span style="font-weight: 700;">YOU DO WITH MORE FOCUS..</span> <span style="font-weight: 200;"></span></h2>
-          <p style="text-align: left;"><span style="font-weight: 300;">• Better Grades</span></p>
-          <p style="text-align: left;"><span style="font-weight: 300;">• Work Smater</span></p>
-          <p style="text-align: left;"><span style="font-weight: 300;">• Understand More</span></p>
-          <p style="text-align: left;"><span style="font-weight: 300;">• Reach goals quicker</span></p>
-
-        </div>
-        <div id="handimage" class="col-lg-6 text-center pt-3" style="position: relative;">
-              <img class="img-fluid" style="position:absolute; bottom:0; left: 0; width: 700px;" src="img/hand.png" alt="">
-        </div>
-      </div>
-    </div>
-  </section>
-  
-  <section>
-    <div class="gradient-parent" style="margin: auto; text-align: center; height: 16.5cm;">
-      <h2 style="padding-top: 1cm; color: white;"><span style="font-weight: 200;">Study is for </span><span style="font-weight: 700;">every</span> <span style="font-weight: 200;">mind.</span></h2>
-      <h2 style="color: white;"><span style="font-weight: 200;">Make it your own.</span></h2>
-      <div style="position: relative;">
-        <img class="img-fluid pt-5" style="width: 300px;" src="img/bottomImage.png" alt="">
-      </div>
-    </div>
-  </section>
-  
-  
-
 
   <!-- Footer -->
   <footer class="py-4 bg-black">
