updated main page, and pp & tc

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
   <section>
     <div class="gradient-parent" style="margin: auto; text-align: center;">
       
-            <img class="img-fluid" style="width: 10cm; border-radius: 1cm;" src="img/quote.PNG" alt="">
+            <img class="img-fluid" style="width: 10cm; border-radius: 1cm;" src="img/quote.png" alt="">
     </div>
   </section>
 
