added dlete page

--- a/deleteData.html
+++ b/deleteData.html
@@ -5,11 +5,11 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="An app to time your yoga routine & create custom routines">
-  <meta name="author" content="MyYogaTimerApp">
+  <meta name="description" content="An app to strengthen you pelvic floor with kegels.">
+  <meta name="author" content="MensKegelTrainer">
 
-  <title>My Yoga Timer</title>
-  <meta name="keywords" content="app, Yoga Timer App, MyYogaTimer, custom routines, create routine, timer, yoga, downward dog, Edge Effect Media, inspired flow yoga">
+  <title>Mens Kegel Trainer</title>
+  <meta name="keywords" content="mens kegel trainer, kegel trainer,kegel,kegel exercises, kegel men, Effect Media,">
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -28,10 +28,10 @@
     <div class="gradient-parent" style="margin: auto; text-align: center; height: 25.5cm;">
       <p>Delete your data with this link on the device you have the app installed:</p>
       <div class="text-center" style="margin: auto; padding-bottom: 1cm;">
-            <a href="https://myflows.yoga/link/flow/deleteData" style="padding: 1cm">Delete Data</a>
+            <a href="https://myflows.yoga/link/flow/deleteData" style="padding: 1cm; color: red;">Delete Data</a>
     </div>
     <div>
-        You'll be taken to the profile page of the app and at the bottom there is a button to delete your data.
+        In Settings, go to 'Account' and at the bottom of the page there is a 'Delete you account and all data' button. 
     </div>
     <div>
         <div class="text-center pt-5" style="margin: auto;">
@@ -44,11 +44,12 @@
   <!-- Footer -->
   <footer class="py-4 bg-black">
     <div class="container text-center">
-      <img src="img/darkmode.PNG" style="width: 5cm; max-width: 100%;">
-      <h1 class="masthead-heading mb-0" style="display: none;">MyYoga Timer</h1>
+      <img src="img/logo.png" style="width: 5cm; max-width: 100%;">
+      <h1 class="masthead-heading mb-0" style="display: none;">MyStudy Timer</h1>
+      <p style="color: white;">Support Contact: ollietheexplorer@gmail.com</p>
       <div class="text-center pt-5" style="margin: auto;">
-            <a href="https://play.google.com/store/apps/details?id=com.EdgeEffectMedia.MyYoga&hl=en&gl=US" style="padding: 1cm"><img style="height: 55px;" class="img-fluid" src="img/google_play_badge.png" alt=""></a>
-            <a href="https://apps.apple.com/us/app/myyoga-timer/id6448668901" style="padding: 1cm"><img style="height: 60px;" class="img-fluid" src="img/ios_store_badge.svg" alt=""></a>
+            <a href="https://play.google.com/store/apps/details?id=com.edgeeffectmedia.studytimer&hl=en_AU" style="padding: 1cm"><img style="height: 55px;" class="img-fluid" src="img/google_play_badge.png" alt=""></a>
+            <a href="https://apps.apple.com/us/app/my-study-timer-pomodoro/id6744005752" style="padding: 1cm"><img style="height: 60px;" class="img-fluid" src="img/ios_store_badge.svg" alt=""></a>
     </div>
     <!-- /.container -->
   </footer>
